  the SCIP shell dialog "display statistics" now also prints the statistics from solving the Benders' decomposition in the relaxator
- added a dynamic max-lookahead criterion for strong branching. Fits a probability distribution to the observed candidate gains and
  stop evaluating further candidates once the expected tree-size reduction no longer justifies the LP evaluation cost.

Performance improvements
------------------------

- reimplemented SCIPvarGetActiveRepresentatives() by using dense arrays to avoid repeated resorting.
- simplified symmetry detection graphs in case all edges have the same color
- avoid unnecessary calls of constraint handlers components, benders, benderslp, propagator genvbounds, and heuristics ofins, subnlp, nlpdiving, indicator

Examples and applications
-------------------------

- Add PBSolver application to solve pseudoboolean instances in OPB and WBO format while complying with PB competition rules
- Coloring: new parameter branching/coloring/strategy to choose the least/most fractional variable for branching

Interface changes
-----------------

### Deprecations

- The variable type \ref SCIP_VARTYPE_IMPLINT is deprecated in favor of a new enum \ref SCIP_IMPLINTTYPE that indicates if a
  variable is implied integral, independent of the variable type.
  The problem variable arrays is still sorted as:
  ```
   (0) | binary | integer | implied integral | continuous | (nvars),
  ```
  where the implied integral subsection is now subdivided into 3 parts (left to right):
  ```
  | binary implied integral | integer implied integral | continuous implied integral |
  ```
  SCIP 10 still supports using SCIP_VARTYPE_IMPLINT for backward compatibility, see SCIPcreateVar() and SCIPchgVarType() for more details.
  SCIP 11 will remove SCIP_VARTYPE_IMPLINT.

### New and changed callbacks

- added a new callback TABLE_COLLECT for the table plugin that collects the data for the specific statistics table in a SCIP_DATATREE object