@@ -13946,7 +13946,7 @@ SCIP_ROW* SCIPgetRowKnapsack(
 }
 
 /** creates and returns the row of the given knapsack constraint */
-SCIP_ROW* SCIPcreateRowKnapsack(
+SCIP_ROW* SCIPinitRowKnapsack(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_CONS*            cons                /**< constraint data */
    )
