@@ -173,7 +173,7 @@ SCIP_ROW* SCIPgetRowLogicor(
 
 /** creates and returns the row of the given logicor constraint */
 SCIP_EXPORT
-SCIP_ROW* SCIPcreateRowLogicor(
+SCIP_ROW* SCIPinitRowLogicor(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_CONS*            cons                /**< constraint data */
    );
