@@ -9729,7 +9729,7 @@ SCIP_ROW* SCIPgetRowSetppc(
 }
 
 /** creates and returns the row of the given set partitioning / packing / covering constraint */
-SCIP_ROW* SCIPcreateRowSetppc(
+SCIP_ROW* SCIPinitRowSetppc(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_CONS*            cons                /**< constraint data */
    )
