@@ -5668,7 +5668,7 @@ SCIP_ROW* SCIPgetRowVarbound(
 }
 
 /** creates and returns the row of the given varbound constraint */
-SCIP_ROW* SCIPcreateRowVarbound(
+SCIP_ROW* SCIPinitRowVarbound(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_CONS*            cons                /**< constraint data */
    )
