@@ -34,6 +34,7 @@ Features
   the SCIP shell dialog "display statistics" now also prints the statistics from solving the Benders' decomposition in the relaxator
 - added a dynamic max-lookahead criterion for strong branching. Fits a probability distribution to the observed candidate gains and
   stop evaluating further candidates once the expected tree-size reduction no longer justifies the LP evaluation cost.
+- added generalized resolution conflict analysis that operates directly on linear constraints instead of conflict graphs.
 
 Performance improvements
 ------------------------
@@ -224,6 +225,8 @@ Interface changes
 - new parameters "branching/relpscost/dynamiclookahead", "branching/relpscost/dynamiclookaheadquot", "branching/relpscost/dynamiclookdistribution",
   and "branching/relpscost/minsamplesize" to configure the dynamic max-lookahead criterion for strong branching: enable flag, fraction threshold,
   distribution choice, and minimum sample size.
+- new parameters "conflict/usegenres", "conflict/reduction", "conflict/mbreduction", "conflict/maxvarsfracres", "conflict/resfuiplevels",
+  "conflict/fixandcontinue", and "conflict/maxcoefquot" to control generalized resolution conflict analysis.
 
 ### Data structures
 
@@ -311,6 +314,10 @@ Interface changes
 
 ### New API functions
 - SCIPdisplaySymmetryGenerators() and SCIPdialogExecDisplaySymmetry() to display generators of symmetry group
+- SCIPconsCreateRow() to create and return the row of a linearly representable constraint
+- SCIPinitRowKnapsack(), SCIPinitRowLinear(), SCIPinitRowLogicor(), SCIPinitRowSetppc(), SCIPinitRowVarbound() to create
+  and get the row of linearly representable constraints.
+- SCIPgetNResConflictConssApplied() to return the number of generalized resolution conflict constraints added to the problem
 
 ### Command line interface
 
